2007-08-28  Christian Persch  <chpe@gnome.org>

	* data/mime-types-permissions.xml:

	More mime types.

2007-08-27  Christian Persch  <chpe@gnome.org>


	=== Release 2.19.91 ===

2007-08-26  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-go-action.c:

	Fix the Go button signal handler so it doesn't stop the propagation of
	the event due to a bad signal handler. Fixes bug #469845. Patch by
	Cosimo Cecchi.

2007-08-26  Diego Escalante Urrelo  <diegoe@gnome.org>

	* lib/ephy-file-helpers.c:
	* lib/ephy-file-helpers.h:
	* embed/mozilla/MozDownload.h:
	* embed/mozilla/MozDownload.cpp:

	Add saved files to the GtkRecent list, gnome-panel is broken so don't
	expect to see the effects of this working there, you can use it on the
	GtkFileChooser dialog however. Fixes Bug #148401. Original patch by
	Christian Persch, updated by Cosimo Cecchi.

2007-08-25  Christian Persch  <chpe@gnome.org>

	* data/mime-types-permissions.xml:

	More mime types.

2007-08-22  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GeckoPrintService.cpp:

	Enable printing to PDF file on gecko 1.9, now that moz#367907 is
	fixed.

2007-08-19  Diego Escalante Urrelo  <diegoe@gnome.org>

	* lib/widgets/ephy-location-entry.c:

	Make cursor be at the end of the URL when selecting entries from the
	completion popup. Fixes bug #466344.

2007-08-16  Xan Lopez  <xan@gnome.org>

	* embed/webkit/webkit-embed.cpp (impl_reload): implement reload.

2007-08-16  Carlos Garcia Campos  <carlosgc@gnome.org>

	* lib/egg/egg-toolbar-editor.c: (set_drag_cursor):
	* lib/egg/egg-editable-toolbar.c: (configure_item_cursor),
	(new_pixbuf_from_widget):

	Fix multihead problems in toolbar editor.
	
2007-08-15  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/downloader-view.c:

	Fix download-icon toolip updates, patch by Cosimo Cecchi.
	Fixes bug #343238.

2007-08-15  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/mozilla/GtkNSSDialogs.cpp:

	Default to Cancel on Cert dialogues, patch by Cosimo Cecchi. 